--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,14 @@ dependencies:
   flutter_bloc: 8.0.1
   google_maps_flutter: ^2.4.0
   geolocator: 10.0.0
+  fpdart: ^1.1.0
+  build_runner: 2.4.0
+  mockito: 5.4.2
+  objectbox_generator: any
+  flutter_modular: ^5.0.3
+  dio: 4.0.5
+  connectivity_plus: 2.2.1
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
